--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Box O Donutz</title>
-    <link id="styles" rel="stylesheet" href="/javascripts/apps/donuts/resources/styles.css">
+    <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link id="styles" rel="stylesheet" href="/javascripts/apps/donuts/resources/styles.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script src="/javascripts/libs/underscore.js" type="text/javascript"></script>
     <script src="/javascripts/libs/backbone.js" type="text/javascript"></script>
